added hex color code in this website

--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Color Picker</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Color Picker</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-  <div class="container f-center">
-    <div class="color-picker">
-      <div class="color-selector">
-        <label for="red">Red:</label>
-        <input type="range" name="red" id="red" value="0" min="0" max="255" />
-        <label for="green">Green:</label>
-        <input type="range" name="green" id="green" value="0" min="0" max="255" />
-        <label for="blue">Blue:</label>
-        <input type="range" name="blue" id="blue" value="0" min="0" max="255" />
-        <label for="alpha">Alpha:</label>
-        <input type="range" name="alpha" id="alpha" value="10" max="10" min="0" />
+  <body>
+    <div class="container f-center">
+      <div class="color-picker">
+        <div class="color-selector">
+          <label for="red">Red:</label>
+          <input type="range" name="red" id="red" value="0" min="0" max="255" />
+          <label for="green">Green:</label>
+          <input
+            type="range"
+            name="green"
+            id="green"
+            value="0"
+            min="0"
+            max="255"
+          />
+          <label for="blue">Blue:</label>
+          <input
+            type="range"
+            name="blue"
+            id="blue"
+            value="0"
+            min="0"
+            max="255"
+          />
+          <label for="alpha">Alpha:</label>
+          <input
+            type="range"
+            name="alpha"
+            id="alpha"
+            value="10"
+            max="10"
+            min="0"
+          />
+        </div>
+        <label for="code">Color Code:</label>
+        <div class="color-code" id="colorCode">
+          <span class="copy-text"  id="text">rgba</span><span class="copy-color" id="color">(0,0,0,255)</span>
+        </div>
+        <div class="color-code" id="colorCodeHex">
+          <span class="copy-text" id="hex_text">#</span><span class="copy-color" id="hex_color">000000</span>
+        </div>
       </div>
-      <label for="code">Color Code:</label>
-      <div class="color-code" id="colorCode">
-        <span id="text">rgba</span><span id="color">(0,0,0,255)</span>
-      </div>
+      <div id="toast">Copied To Clipboard</div>
     </div>
-    <div id="toast">
-      Copied To Clipboard
-    </div>
-  </div>
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
